app/src/main/java/com/example/eltory/rejectcall/ListTimeObj.java
package com.example.eltory.rejectcall;

import java.util.ArrayList;

/**
 * Created by eltory on 2017-06-14.
 */
public class ListTimeObj {
    ArrayList<TimeObj> list;

    public void setList(ArrayList<TimeObj> list) {
        this.list = list;
    }

    public ArrayList<TimeObj> getList() {
        return list;
    }
}
